--- a/theme/default/user.profile.twig
+++ b/theme/default/user.profile.twig
@@ -211,7 +211,7 @@
                                     <h6 class="title collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Active sessions</h6>
                                     <section class="checkout-steps-form-content collapse" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                         {% for token in user.tokens %}
-                                            <div class="row pb-4">
+                                            <div class="row pt-4">
                                                 <div class="col-8"><b>{{ token.comment }}</b></div>
                                                 <div class="col-4 text-end">{{ token.ip }}</div>
                                                 <div class="col-12">{{ token.agent }}</div>
@@ -219,7 +219,7 @@
                                             </div>
                                         {% endfor %}
 
-                                        <div class="row">
+                                        <div class="row pt-4">
                                             <a class="btn btn-primary" href="/user/revoke">Close other sessions</a>
                                         </div>
                                     </section>
