--- a/theme/default/catalog.category.attributes.twig
+++ b/theme/default/catalog.category.attributes.twig
@@ -1,18 +1,15 @@
-{% if products.filtered.count() and category is not empty and category.hasAttributes() %}
-    {% set attributes = category.getAttributes() %}
-    {% set keys = attributes.pluck('uuid') %}
-
-    {% for attribute in attributes %}
+{% if products.filtered.count() %}
+    {% for attribute in category.getAttributes() %}
         <!-- Start Widget -->
         <div class="single-widget condition">
             <h3>{{ attribute.title }}</h3>
 
             <ul class="list">
-                {% for attr in attribute.getProductAttributes().unique('value') %}
+                {% for value, count in attribute.getValuesWithCounts(category.getNested(categories)) %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="{{ attribute.uuid }}" value="{{ attr.value }}" id="{{ attr.uuid }}" {{ _request[attribute.address] == attr.value ? 'checked' : '' }} onchange="(() => {location = '{{ non_page_path() }}{{ page ? '/' ~ page : '' }}{{ current_query(attribute.address, attr.value|trim) }}'})()">
+                        <input class="form-check-input" type="radio" name="{{ attribute.uuid }}" value="{{ attr.value }}" id="{{ attr.uuid }}" {{ _request[attribute.address] == value ? 'checked' : '' }} onchange="(() => {location = '{{ non_page_path() }}{{ page ? '/' ~ page : '' }}{{ current_query(attribute.address, value|trim) }}'})()">
                         <label class="form-check-label" for="{{ attr.uuid }}">
-                            {{ attr.value }} ({{ attr.getCount() }})
+                            {{ value }} ({{ count }})
                         </label>
                     </div>
                 {% endfor %}
