change default value for entity[access]

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -594,7 +594,7 @@
                                                             'name': 'entity[access]',
                                                             'args': {
                                                                 'option': _(['all', 'key', 'user']),
-                                                                'selected': 'user'
+                                                                'selected': 'key'
                                                             }
                                                         } %}
 
