fix footer copyright

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -391,11 +391,16 @@
                     <footer class="footer">
                         <div class="container-fluid">
                             <div class="copyright mr-auto">
-                                Copyright &copy; 2011-{{ 'now'|df('Y') }} <a href="https://getwebspace.org" target="_blank">WebSpace Engine</a> &mdash; {{ 'platform for managing content on the site'|locale }}.<br>
+                                Copyright: &copy; 2011-{{ 'now'|df('Y') }} Aleksey Ilyin<br>
                                 {{ 'Build'|locale }}: <span class="text-muted">{{ SHA }}</span>
                             </div>
                             <nav class="pull-right">
                                 <ul class="nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="https://getwebspace.org" target="_blank">
+                                            WebSpace Engine
+                                        </a>
+                                    </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="https://github.com/getwebspace/platform" target="_blank">
                                             GitHub
