--- a/theme/default/components/special-offer.twig
+++ b/theme/default/components/special-offer.twig
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="row">
-            {% for product in catalog_products({'special': 'true'}, [], 6) %}
+            {% for product in catalog_product({'special': 'true'}, [], 6) %}
                 <div class="col-lg-3 col-md-6 col-12">
                     <!-- Start Single Product -->
                     {% include 'catalog.category.product.grid.twig' with {'product': product} %}
