--- a/theme/default/catalog.cart.twig
+++ b/theme/default/catalog.cart.twig
@@ -146,7 +146,6 @@
                                                     'args': {
                                                         'value': user.getName(),
                                                         'required': true,
-                                                        'placeholder': 'Ваше имя *',
                                                         'class': ['form-control'],
                                                         'data': {'catalog-cart-data': ''}
                                                     }
@@ -161,7 +160,6 @@
                                                     'name': 'email',
                                                     'args': {
                                                         'value': user.getEmail(),
-                                                        'placeholder': 'Ваш E-Mail',
                                                         'class': ['form-control'],
                                                         'data': {'catalog-cart-data': ''}
                                                     }
@@ -177,7 +175,6 @@
                                                     'args': {
                                                         'value': user.getPhone(),
                                                         'required': true,
-                                                        'placeholder': 'Ваш телефон *',
                                                         'class': ['form-control'],
                                                         'data': {'catalog-cart-data': ''}
                                                     }
@@ -312,7 +309,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-4 mt-4 mt-lg-0">
                     <div class="checkout-sidebar">
                         <div class="checkout-sidebar-price-table">
                             <h5 class="title">Total</h5>
